--- a/index.html
+++ b/index.html
@@ -3,10 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Theka Coffee</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="/img/logo.svg" type="image/x-icon">
 </head>
 <body>
-  
+  <main>
+    <!-- NAVIGATION -->
+    <nav>
+      <a href="#" class="logo"><img src="/img/logo.svg" alt="Theka Logo"></a>
+      <div class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </nav>
+
+    <!-- HERO IMAGE -->
+    <div class="hero_showcase"></div>
+    </div>
+  </main>
+
+  <!-- GSAP -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"></script>
+  <script>
+  </script>
 </body>
 </html>
